Fixed mainlogo placement on mobile

--- a/components/mainLogo.css
+++ b/components/mainLogo.css
@@ -1,4 +1,4 @@
 .mainLogo {
-    width: 25vw;
-    height: 25vw;
+    width: 100%;
+    margin: 0 auto;
 }
